--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,59 @@
-Django
-djangorestframework
-rav
-django-environ
-drf-yasg
+annotated-types==0.7.0
+asgiref==3.8.1
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.3.2
+contextlib2==21.6.0
+cryptography==43.0.1
+dj-database-url==2.2.0
+Django==5.0.9
+django-allauth==65.0.0
+django-allauth-ui==1.4.1
+django-cors-headers==4.4.0
+django-environ==0.11.2
+django-ninja==1.3.0
+django-ninja-extra==0.21.4
+django-ninja-jwt==5.3.4
+django-widget-tweaks==1.5.0
+djangorestframework==3.15.2
+dnspython==2.6.1
+drf-yasg==1.21.8
+email_validator==2.2.0
+fire==0.7.0
+gunicorn==23.0.0
+idna==3.10
+inflection==0.5.1
+injector==0.22.0
+joblib==1.4.2
+markdown-it-py==3.0.0
+mdurl==0.1.2
+numpy==1.26.4
+oauthlib==3.2.2
+packaging==24.1
+psycopg==3.2.2
+psycopg-binary==3.2.2
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
+PyJWT==2.9.0
+python-decouple==3.8
+pytz==2024.2
+PyYAML==6.0.2
+rav==0.0.9
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.9.2
+scikit-learn==1.4.2
+scipy==1.13.0
+slippers==0.6.2
+sqlparse==0.5.1
+stripe==10.12.0
+termcolor==2.4.0
+threadpoolctl==3.5.0
+typeguard==2.13.3
+typing_extensions==4.12.2
+tzdata==2024.1
+uritemplate==4.1.1
+urllib3==2.2.3
+whitenoise==6.7.0
